erpnext/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
  name: erpnext
  namespace: erpnext
spec:
  rules:
  - host: zecore.zebrands.mx
    http:
      paths:
      - backend:
          service:
            name: erpnext
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
